--- a/front/src/css/Home.css
+++ b/front/src/css/Home.css
@@ -121,6 +121,7 @@
     margin-bottom: 20px;
     overflow: hidden;
     max-height: 60%;
+    padding: 15px;
 }
 
 .Note .TopRow {
@@ -143,6 +144,62 @@
 
 .Note .NoteTitle {
     width: 90%;
+}
+
+/* SEARCH BOX */
+
+.searchBox {
+    font-size: 100%;
+    margin: 0px;
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    background: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 0px;
+}
+
+.searchBox * {
+    margin: 0px;
+}
+
+.searchBox:hover>.searchInput {
+    width: 30vw;
+    padding: 0 15px;
+}
+
+.searchBox:hover>.searchButton {
+    background: white;
+    color: #2f3640;
+}
+
+.searchButton {
+    padding: 22px;
+    color: white;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+}
+
+.searchInput {
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    color: white;
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 0px;
 }
 
 /* Media queries */
