--- a/front/src/css/Note.css
+++ b/front/src/css/Note.css
@@ -40,3 +40,11 @@
 .NoteForm .form-group .buttons button {
     margin-left: 10px;
 }
+
+/* DIALOG */
+dialog {
+    padding: 10px;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
